# carnaval

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  anonymize.py  mypy.ini  pyproject.toml  pytest.ini  reinject.py  requirements-lock.txt  requirements.txt  video_presentation_concept.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
assets/dictionaries/cities/: de.txt  it.txt  pt.txt
assets/dictionaries/firstnames/: es.txt  fr.txt  pt.txt
config/: pipeline.yaml
docs/: 00_overview.md  01_architecture_etages.md  02_install.md  03_deploiement_production.md  04_configuration.md  05_extension_listes.md  06_extension_recognizers.md  07_securite.md  08_format_entree_sortie.md  09_troubleshooting.md  10_api_reference.md  11_tests_validation.md  benchmark.html  documentation.html  index.html  linkedin_post.md  visibility_strategy.md
docs/appartcheck/: app.css  app.js  index.html  manifest.json  sw.js
docs/git-guides/: README.md
docs/website/: index.html
examples/: quickstart_api.py  sample_ack_globex.txt  sample_ack_ingen_pl.txt  sample_ack_initech_de.txt  sample_ack_initech_tr.txt
log/: 00_journal_implementation.md
profiles/: README.md
profiles/acknowledge/: README.md  profile.yaml
profiles/acknowledge/allow_lists/: product_refs.yaml
profiles/acknowledge/deny_lists/: organization_singleton.yaml  organizations.yaml  people.yaml
profiles/acknowledge/deny_lists/places/: de.yaml  en.yaml  fr.yaml
profiles/acknowledge/fixtures/: README.md  sample_ack_cyberdyne_pt.txt  sample_ack_globex_en.txt  sample_ack_soylent_es.txt  sample_ack_tyrell_jp.txt  sample_ack_vandelay_it.txt
profiles/email/: README.md
profiles/email/deny_lists/: organizations.yaml
profiles/email/fixtures/: sample_email_vandelay.txt
profiles/invoice/: README.md  profile.yaml
profiles/invoice/fixtures/: sample_invoice_initech.txt
scripts/: build_dictionaries.py
src/carnaval/: __init__.py  pipeline.py
src/carnaval/cli/: __init__.py  anonymize.py  reinject.py
src/carnaval/core/: __init__.py  allow_list.py  config_loader.py  language_detector.py  logger.py  pdf.py  propagation.py  serializers.py  span.py  table_body.py  vault.py
src/carnaval/recognizers/: __init__.py  base.py  multilingual_labels.py
src/carnaval/recognizers/ai/: __init__.py  gliner_engine.py
src/carnaval/recognizers/denylist/: __init__.py  organizations.py  people.py  places.py  singleton.py
src/carnaval/recognizers/dictionary/: __init__.py  _loader.py  automotive_oem.py  cities.py  firstnames.py  surnames.py
src/carnaval/recognizers/post/: __init__.py  org_line_expansion.py  person_line_expansion.py
src/carnaval/recognizers/regex/: __init__.py  address_fr.py  address_fragment.py  affair_number.py  bank_by_context.py  client_code.py  commercial_cell.py  compact_date.py  company_header.py  context_location.py  date_of_birth.py  email.py  enumerated_names.py  fiscal_fr.py  fiscal_labeled.py  header_source.py  iban_bic.py  incoterm_location.py  internal_refs.py  legal_signals.py  maiden_name.py  name_patterns.py  national_id.py  order_ref.py  org_structure.py  org_suffix.py  paren_content.py  url.py  (+6 more)
src/carnaval/stages/: __init__.py  documents.py  s1_intake.py  s2_preprocess.py  s3_detect.py  s4_resolve.py  s5_mask.py  s6_output.py  s7_reinject.py
tests/: README.md  conftest.py  test_template.py
tests/integration/: test_pipeline.py  test_profiles.py
tests/recognizers/: test_ai.py  test_denylist.py  test_regex.py
tests/unit/: test_config_loader.py  test_language_detector.py  test_logger.py  test_s1_intake.py  test_s2_preprocess.py  test_s3_detect.py  test_s4_resolve.py  test_s5_mask.py  test_s6_output.py  test_s7_reinject.py  test_span.py  test_vault.py
(+46 files in other folders)
