[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carnaval"
version = "0.1.0"
description = "Reversible PII anonymization framework with an encrypted vault"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Patrice AUBERT", email = "carnaval.oss@gmail.com" },
]
maintainers = [
    { name = "Patrice AUBERT", email = "carnaval.oss@gmail.com" },
]
keywords = [
    "pii", "pii-anonymization", "anonymization", "pseudonymization",
    "data-masking", "privacy", "data-protection", "gdpr", "compliance",
    "nlp", "ner", "named-entity-recognition", "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pycryptodome>=3.20",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "lingua-language-detector>=2.0",
]

[project.urls]
Homepage = "https://github.com/carnaval-ai/carnaval"
Repository = "https://github.com/carnaval-ai/carnaval"
Documentation = "https://github.com/carnaval-ai/carnaval/wiki"
Issues = "https://github.com/carnaval-ai/carnaval/issues"
Changelog = "https://github.com/carnaval-ai/carnaval/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Detection PII zero-shot par modele NER. Optionnel : tire torch (lourd).
ai = [
    "gliner>=0.2",
]
# Outillage de test et de couverture.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
carnaval-anonymize = "carnaval.cli.anonymize:main"
carnaval-reinject = "carnaval.cli.reinject:main"

[tool.hatch.build.targets.wheel]
packages = ["src/carnaval"]

[tool.hatch.build.targets.sdist]
include = [
    "src/carnaval",
    "assets",
    "config",
    "profiles",
    "docs",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: tests lents (telechargement modeles, IA reelle)",
]
